# skill-matrix-manager-v2

./: .gitignore  BACKUP_INFO.md  README.md  requirements.txt  run_tests.py  setup.py  skill_matrix.db  test_db_connection.py
config/: pyproject.toml  requirements_frozen.txt
data/: skill_matrix.db
docs/: architecture.md  database.md  views.md
skill-matrix-manager/: .coverage
src/: app.py  migrate.py  requirements.txt  run.py  setup.py
src/config/: settings.py
src/database/: __init__.py  base_manager.py  category_manager.py  database.py  database_manager.py  evaluation_manager.py  exceptions.py  group_manager.py  init_db.py  interfaces.py  manager.py  migration_manager.py  skill_manager.py  user_manager.py
src/database/migrations/: V20250208140405__initial_schema.py  __init__.py  migration_manager.py
src/models/: __init__.py  category.py  group.py  skill.py  user.py
src/skill_matrix_manager/database/: __init__.py  manager.py
src/skill_matrix_manager/views/: main_window.py  styles.py
src/utils/: __init__.py  display.py  exceptions.py  log_config.py  logger.py  logging_config.py  memory_monitor.py  memory_profiler.py  memory_tracker.py  object_pool.py  system_info.py  time_utils.py  type_manager.py
src/views/: main_window.py
src/views/dialogs/: __init__.py  category_dialog.py  group_dialog.py  (+4 more)
tests/: conftest.py  db_test.py  seed.py  test_category_management.py  test_database_manager.py  test_display.py  test_group_management.py  test_skill_matrix.py  test_user_management.py
tests/integration/: test_system_tab.py  test_ui_integration.py
(+20 files in other folders)
