[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill_matrix_manager"
version = "2.0.0"
description = "スキルマトリックス管理アプリケーション"
authors = [{name = "GingaDza", email = "gingadza@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "PyQt5>=5.15.0",
    "pandas>=1.0.0",
    "numpy>=1.19.0",
    "reportlab>=3.6.0",
    "psutil>=5.8.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.0.0",
    "pytest-cov>=6.0.0"
]
